fixed navbar collapse function and updates to styling

--- a/assets/css/newStyles.css
+++ b/assets/css/newStyles.css
@@ -34,11 +34,6 @@ header {
   width: 100%;
 }
 
-.color a:hover {
-  background-color: #5bc0de;
-  border-radius: 20px;
-}
-
 h1 {
   font-family: Roboto;
 }
